tests/NormalTests/paczka1/fuzzy1/57004161.err
Error in line 4: 0BnX A228 88,3
Error in line 3: A228 A341 56,1
Error in line 8: qhJ2kYU A341 47,6
Error in line 25: k96 A228 55,4
Error in line 26: k96 A421 61,3
Error in line 19: A228 A421 225,1
Error in line 33: A228 A679 3,3
Error in line 32: oaHMNZX A679 7,9
